--- a/Apuntes/7.React/Apuntes/10. Testing.md
+++ b/Apuntes/7.React/Apuntes/10. Testing.md
@@ -50,7 +50,7 @@ test:{
 
 <h2 style="text-align: center; color: #ffb563;">4. Configuración</h2>
 
-Como podemos en el paso anterior, necesitaremos crear un fichero dentro de <span style="text-align: center; color: #ffb563;">src</span> llamado <span style="text-align: center; color: #ffb563;">setupTest.js</span> que dentro tendrá:
+Como podemos ver en el paso anterior, necesitaremos crear un fichero dentro de <span style="text-align: center; color: #ffb563;">src</span> llamado <span style="text-align: center; color: #ffb563;">setupTest.js</span> que dentro tendrá:
 
 ```
 import "@testing-library/jest-dom"
